--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <header class="hero">
-        <img class ="hero-img" src="images/Site.svg" />
+        <img class ="hero-img" src="images/hero.svg" />
         <h1 class="hero-heading">Sandeep Prajapati</h1>
     </header>
 
