--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1>Projects</h1>
         <div class="container-center">
         <p>I like to showcase my work and thus you can see my project hosted online</p> 
-        <a class="link primary-link" href="/">Browse Project</a>       
+        <a class="link primary-link" href="/projects.html">Browse Project</a>       
         </div>
     </section>
 
@@ -58,7 +58,7 @@
                     Linked-in
                 </a>
                 <li class="list-item-inline">
-                <a class="link" href="https://www.instagram.com/clawxdeadpool/">
+                <a class="link" href="https://www.instagram.com/muzan_drawing/">
                     Instagram
                 </a>
             </ul>
