--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
-    <title>Blogs</title>
+    <title>Projects</title>
 </head>
 <body>
     <nav class="navigation container">
@@ -25,8 +25,14 @@
     </nav>
     <header class="hero">
         
-        <h1 class="hero-heading">Sandeep Prajapati</h1>
+        <h1 class="hero-heading">Here You can See My project</h1>
     </header>
+    <hr>
+    <a href="https://main--frolicking-malabi-6c0e0a.netlify.app/" class="link-image">
+        <img src="images/Minion.jpg">
+        <span>If you are minion fan make sure to visit this you will enjoy it</span>
+    </a>
+    
 
 </body>
 </html>
