Made some minor changes related to project.

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,12 @@
         <img src="images/Minion.jpg">
         <span>If you are minion fan make sure to visit this you will enjoy it</span>
     </a>
-    
+
+    <hr>
+    <a href="https://check-is-your-birthday-lucky-or-not.netlify.app/" class="link-image">
+        <img src="images/OIP.jpg">
+        <span>Check If your birthday lucky or not :)</span>
+    </a>
 
 </body>
 </html>
